update gnome-shell + dependencies to git
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gjs/sources
	modified:   gnome/gjs/version
	modified:   gnome/gnome-calendar/build
	modified:   gnome/gnome-calendar/version
	modified:   gnome/gnome-control-center/version
	modified:   gnome/gnome-settings-daemon/build
	modified:   gnome/gnome-settings-daemon/checksums
	modified:   gnome/gnome-settings-daemon/sources
	modified:   gnome/gnome-shell/sources
	modified:   gnome/gnome-shell/version
	new file:   gnome/js91/build
	new file:   gnome/js91/checksums
	new file:   gnome/js91/patches/0001-Fixes-for-LTO-PGO-support.patch
	new file:   gnome/js91/sources
	new file:   gnome/js91/version
	modified:   gnome/mutter/build
	modified:   gnome/mutter/version

--- a/gnome/gnome-settings-daemon/build
+++ b/gnome/gnome-settings-daemon/build
@@ -4,6 +4,9 @@ export DESTDIR="$1"
 # Fix build with meson >= 0.61
 patch -Np1 -i d88484002b5a0c8d2adccb2a5886a7da0a247d27.patch
 
+# Build with libgweather 4
+patch -Np1 -i 280.patch
+
 git submodule init
 git submodule update
 
