--- a/gnome/mutter/build
+++ b/gnome/mutter/build
@@ -7,8 +7,7 @@ export LDFLAGS+=" -Wl,-Bsymbolic-functions"
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D egl_device=true \
-    -D wayland_eglstream=false \
-    -D tests=false 
+    -D wayland_eglstream=false 
 
 ninja -C build 
 ninja -C build install
