--- a/gnome/gnome-settings-daemon/build
+++ b/gnome/gnome-settings-daemon/build
@@ -7,6 +7,9 @@ patch -Np1 -i d88484002b5a0c8d2adccb2a5886a7da0a247d27.patch
 # Build with libgweather 4
 patch -Np1 -i 280.patch
 
+# Use new screenshot UI
+patch -Np1 -i 267.patch
+
 git submodule init
 git submodule update
 
