gtk4: enable cloudproviders
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gtk4/build
	modified:   gnome/gtk4/version
	new file:   gnome/libcloudproviders/build
	new file:   gnome/libcloudproviders/sources
	new file:   gnome/libcloudproviders/version

--- a/gnome/gtk4/build
+++ b/gnome/gtk4/build
@@ -6,13 +6,12 @@ export CFLAGS+=" -DG_DISABLE_CAST_CHECKS"
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D broadway-backend=true \
-    -D cloudproviders=disabled \
+    -D cloudproviders=enabled \
     -D tracker=enabled \
     -D colord=enabled \
     -D gtk_doc=false \
     -D man-pages=true \
-    --buildtype plain \
-    -D vulkan=enabled
+    --buildtype plain 
 
 ninja -C build
 ninja -C build install
