gnome: update to latest git where possible
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gnome-bluetooth/sources
	modified:   gnome/gnome-bluetooth/version
	modified:   gnome/gnome-control-center/version
	modified:   gnome/gnome-shell/build
	modified:   gnome/gnome-shell/sources
	modified:   gnome/gnome-shell/version
	modified:   gnome/libadwaita/version
	modified:   gnome/mutter/build
	new file:   gnome/mutter/checksums
	modified:   gnome/mutter/sources
	modified:   gnome/nautilus/build
	new file:   gnome/nautilus/checksums
	modified:   gnome/nautilus/sources
	modified:   gnome/nautilus/version
	modified:   gnome/usbguard/build

--- a/gnome/gnome-shell/build
+++ b/gnome/gnome-shell/build
@@ -8,7 +8,8 @@ meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D gtk_doc=true \
     -D systemd=true \
-    -D tests=false
+    -D tests=false \
+    --buildtype release
 
 ninja -C build
 ninja -C build install
