--- a/gnome/nautilus/build
+++ b/gnome/nautilus/build
@@ -1,9 +1,10 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
-git fetch
-
 git submodule update --init --recursive
+
+# Fix clipboard 
+patch -Np1 -i 759.patch
 
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
