enable modemmanager in various packages
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/geoclue/build
	modified:   gnome/libnma/build
	new file:   gnome/mobile-broadband-provider-info/build
	new file:   gnome/mobile-broadband-provider-info/sources
	new file:   gnome/mobile-broadband-provider-info/version
	modified:   gnome/network-manager-applet/build

--- a/gnome/geoclue/build
+++ b/gnome/geoclue/build
@@ -12,10 +12,7 @@ done
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D dbus-srv-user=geoclue \
-    -D dbus-sys-dir=/usr/share/dbus-1/system.d  \
-    -D 3g-source=false \
-    -D cdma-source=false \
-    -D modem-gps-source=false
+    -D dbus-sys-dir=/usr/share/dbus-1/system.d  
 
 ninja -C build
 ninja -C build install
