--- a/gnome/accountsservice/build
+++ b/gnome/accountsservice/build
@@ -1,18 +1,13 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
-git fetch
-git cherry-pick -n ac9b14f1
+patch -Np1 -i 0001-build-Properly-apply-modes-in-meson_post_install.py.patch
 
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D admin_group=wheel \
-    -D elogind=false \
-    -D systemd=true \
-    -D systemdsystemunitdir=/usr/lib/systemd/system \
     -D docbook=true \
-    -D gtk_doc=true \
-    -D user_heuristics=false
+    -D gtk_doc=true 
 
 ninja -C build
 ninja -C build install
