--- a/core/findutils/build
+++ b/core/findutils/build
@@ -1,5 +1,8 @@
 #!/bin/sh -uxe
 
-./configure --prefix=/usr
+./configure \
+    --prefix=/usr \
+    --libexecdir=/usr/lib
+
 make 
 make DESTDIR="$1" install
