ccache: add profile script
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   extra/ccache/build
	modified:   extra/ccache/version

--- a/extra/ccache/build
+++ b/extra/ccache/build
@@ -27,3 +27,8 @@ for link in \
 do
     ln -s /usr/bin/ccache "$1/usr/lib/ccache/bin/$link"
 done
+
+mkdir -p "$1"/etc/profile.d
+cat > "$1"/etc/profile.d/ccache.sh << EOF
+export PATH="/usr/lib/ccache/bin:\$PATH"
+EOF
