gnome-{background,control-center,settings-daemon}, upower: git
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/gnome-background/version
	modified:   gnome/gnome-bluetooth/version
	modified:   gnome/gnome-control-center/build
	modified:   gnome/gnome-control-center/sources
	modified:   gnome/gnome-control-center/version
	modified:   gnome/gnome-settings-daemon/build
	modified:   gnome/gnome-settings-daemon/sources
	modified:   gnome/gnome-settings-daemon/version
	modified:   gnome/upower/build
	deleted:    gnome/upower/checksums
	modified:   gnome/upower/sources
	modified:   gnome/upower/version

--- a/gnome/upower/build
+++ b/gnome/upower/build
@@ -1,14 +1,18 @@
 #!/bin/sh -uxe
+export DESTDIR="$1"
 
-NOCONFIGURE=1 ./autogen.sh
+#./configure \
+    #--prefix=/usr \
+    #--sysconfdir=/etc \
+    #--localstatedir=/var \
+    #--libexecdir=/usr/lib \
+    #--disable-static \
+    #--enable-gtk-doc
 
-./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --localstatedir=/var \
-    --libexecdir=/usr/lib \
-    --disable-static \
-    --enable-gtk-doc
+meson build \
+    ${MESON_OPTIONS/-D b_lto=true/} \
+    -D gtk-doc=true \
+    -D idevice=disabled
 
-make
-make DESTDIR="$1" install
+ninja -C build
+ninja -C build install
