zlib: include minizip
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/zlib/build

--- a/core/zlib/build
+++ b/core/zlib/build
@@ -5,3 +5,16 @@
 
 make 
 make DESTDIR="$1" install
+
+cd contrib/minizip
+cp Makefile Makefile.orig
+
+autoreconf -iv
+
+./configure \
+    --prefix=/usr \
+    --enable-static=no
+make 
+make DESTDIR="$1" install
+
+rm "$1"/usr/include/minizip/crypt.h
