modemmanager: fix dbus service generaton
ModemManager needs a version string to generate the D-Bus service
that GNOME Settings and others use.

Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   extra/modemmanager/build

--- a/extra/modemmanager/build
+++ b/extra/modemmanager/build
@@ -4,6 +4,7 @@ export DESTDIR="$1"
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D dbus_policy_dir=/usr/share/dbus-1/system.d \
+    -D dist_version="\"$2-1\"" \
     -D gtk_doc=true \
     -D plugin_qcom_soc=disabled \
     -D polkit=permissive \
