busybox: remove unused directory
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/busybox/build

--- a/core/busybox/build
+++ b/core/busybox/build
@@ -6,7 +6,7 @@ cp config .config
 make
 
 install -Dm0755 busybox "$1"/usr/bin/busybox
-install -dm755 "$1"/usr/share/busybox/bin
+install -dm755 "$1"/usr/share/busybox
 
 "$1"/usr/bin/busybox --list | while read -r bin; do
     ln -s /usr/bin/busybox "$1"/usr/share/busybox/$bin
