gnome: update a bunch of things to 42.0 or rc
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   gnome/accountsservice/version
	modified:   gnome/adw-gtk3/sources
	modified:   gnome/adw-gtk3/version
	modified:   gnome/eog/version
	modified:   gnome/epiphany/version
	modified:   gnome/evince/version
	modified:   gnome/evolution-data-server/build
	modified:   gnome/evolution-data-server/version
	modified:   gnome/extension-manager/version
	modified:   gnome/freerdp/checksums
	modified:   gnome/freerdp/version
	modified:   gnome/gdm/version
	modified:   gnome/gjs/version
	modified:   gnome/gnome-background/version
	modified:   gnome/gnome-bluetooth/build
	modified:   gnome/gnome-bluetooth/version
	modified:   gnome/gnome-calculator/version
	modified:   gnome/gnome-calendar/version
	new file:   gnome/gnome-console/build
	new file:   gnome/gnome-console/sources
	new file:   gnome/gnome-console/version
	modified:   gnome/gnome-control-center/build
	modified:   gnome/gnome-control-center/version
	modified:   gnome/gnome-desktop/version
	modified:   gnome/gnome-disk-utility/version
	modified:   gnome/gnome-music/build
	modified:   gnome/gnome-music/sources
	modified:   gnome/gnome-music/version
	modified:   gnome/gnome-remote-desktop/build
	modified:   gnome/gnome-remote-desktop/version
	modified:   gnome/gnome-settings-daemon/version
	modified:   gnome/gnome-shell-extensions/version
	modified:   gnome/gnome-shell/version
	modified:   gnome/gnome-terminal/build
	modified:   gnome/gnome-terminal/sources
	modified:   gnome/gnome-terminal/version
	modified:   gnome/gnome-text-editor/version
	modified:   gnome/gnome-tweaks/build
	modified:   gnome/gnome-tweaks/sources
	modified:   gnome/gnome-tweaks/version
	modified:   gnome/gvfs/build
	deleted:    gnome/gvfs/patches/meson.patch
	modified:   gnome/gvfs/sources
	modified:   gnome/gvfs/version
	modified:   gnome/libadwaita/version
	modified:   gnome/libgweather/version
	modified:   gnome/

--- a/gnome/evolution-data-server/build
+++ b/gnome/evolution-data-server/build
@@ -8,7 +8,9 @@ cmake -B build -G Ninja \
     -D ENABLE_INTROSPECTION=ON \
     -D ENABLE_VALA_BINDINGS=ON \
     -D ENABLE_GTK_DOC=OFF \
-    -D WITH_PHONENUMBER=OFF
+    -D WITH_PHONENUMBER=OFF \
+    -D ENABLE_WEATHER=OFF
+    # [FIXME] renamed to libgweather4, so cmake fails
 
 ninja -C build
 ninja -C build install
