--- a/gnome/gnome-bluetooth/build
+++ b/gnome/gnome-bluetooth/build
@@ -3,8 +3,7 @@ export DESTDIR="$1"
 
 meson build \
     ${MESON_OPTIONS} \
-    -D gtk_doc=true \
-    -D icon_update=false
+    -D gtk_doc=true 
 
 ninja -C build
 ninja -C build install
