--- a/gnome/gnome-console/build
+++ b/gnome/gnome-console/build
@@ -2,7 +2,7 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS} 
+    ${MESON_OPTIONS/-D b_lto=true/}
 
 ninja -C build
 ninja -C build install
