--- a/gnome/gnome-terminal/build
+++ b/gnome/gnome-terminal/build
@@ -1,14 +1,8 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
-git fetch
-git cherry-pick -n 9a168cc2
-
-#FIXME nautilus extensions breaks with version 42.alpha
-
 meson build \
-    ${MESON_OPTIONS} \
-    -D nautilus_extension=false
+    ${MESON_OPTIONS} 
 
 ninja -C build
 ninja -C build install
