--- a/gui/cairo/build
+++ b/gui/cairo/build
@@ -1,24 +1,12 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
-git fetch
-
-# Fix library versioning
-git cherry-pick -n e9ccb1d8d095482e4139da658e679d5aad56b184
-
-# CVE-2020-35492
-git cherry-pick -n 03a820b173ed1fdef6ff14b4468f5dbc02ff59be
-
-# https://gitlab.freedesktop.org/cairo/cairo/-/issues/449
-git cherry-pick -n a3b69a0215fdface0fd5730872a4b3242d979dca
-
-# Disable XCB backend for Xlib surfaces
-git cherry-pick -n 3468c67fe91f0c37e0ec5d335082653a6fa609b6
-
 meson build \
     -D spectre=disabled \
     -D tee=enabled \
     -D tests=disabled \
+    -D symbol-lookup=disabled \
+    -D gtk_doc=true \
     ${MESON_OPTIONS/-D b_lto=true/}
 
 ninja -C build
