add lm_sensors and enable it in htop
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/htop/build
	new file:   core/lm_sensors/build
	new file:   core/lm_sensors/checksums
	new file:   core/lm_sensors/files/healthd
	new file:   core/lm_sensors/files/healthd.conf
	new file:   core/lm_sensors/files/healthd.service
	new file:   core/lm_sensors/files/sensord.conf
	new file:   core/lm_sensors/sources
	new file:   core/lm_sensors/version
	new file:   core/rrdtool/build
	new file:   core/rrdtool/checksums
	new file:   core/rrdtool/sources
	new file:   core/rrdtool/version

--- a/core/htop/build
+++ b/core/htop/build
@@ -8,7 +8,8 @@ autoreconf -fiv
 	--enable-delayacct \
 	--enable-openvz \
 	--enable-unicode \
-	--enable-vserver 
+	--enable-vserver \
+    --enable-sensors
 
 make
 make DESTDIR="$1" install
