gi-docgen: re-enable gtk-doc in various packages
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	modified:   core/json-glib/build
	modified:   core/json-glib/version
	modified:   gnome/evince/build
	modified:   gnome/evince/version
	modified:   gnome/gtk4/build
	modified:   gnome/gtk4/version
	modified:   gnome/libgweather/build
	modified:   gnome/libgweather/version
	modified:   gnome/libhandy/build
	modified:   gnome/libhandy/version
	modified:   gui/gdk-pixbuf2/build
	modified:   gui/gdk-pixbuf2/version

--- a/gnome/gtk4/build
+++ b/gnome/gtk4/build
@@ -9,7 +9,7 @@ meson build \
     -D cloudproviders=enabled \
     -D tracker=enabled \
     -D colord=enabled \
-    -D gtk_doc=false \
+    -D gtk_doc=true \
     -D man-pages=true \
     --buildtype plain 
 
