--- a/core/json-glib/build
+++ b/core/json-glib/build
@@ -4,7 +4,7 @@ export DESTDIR="$1"
 meson build \
     ${MESON_OPTIONS} \
     -D man=true \
-    -D gtk_doc=disabled
+    -D gtk_doc=enabled
 
 ninja -C build
 ninja -C build install
