--- a/gnome/evince/build
+++ b/gnome/evince/build
@@ -4,8 +4,7 @@ export DESTDIR="$1"
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D ps=enabled \
-    -D dvi=disabled \
-    -D gtk_doc=false \
+    -D dvi=disabled 
 
 ninja -C build
 ninja -C build install
