--- a/gnome/libgweather/build
+++ b/gnome/libgweather/build
@@ -2,8 +2,8 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS/-D b_lto=true/} \
-    -D gtk_doc=false
+    ${MESON_OPTIONS} \
+    -D tests=false
 
 ninja -C build
 ninja -C build install
