--- a/gnome/libhandy/build
+++ b/gnome/libhandy/build
@@ -2,8 +2,7 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS} \
-    -D gtk_doc=false
+    ${MESON_OPTIONS} 
 
 ninja -C build
 ninja -C build install
