--- a/gui/gdk-pixbuf2/build
+++ b/gui/gdk-pixbuf2/build
@@ -4,8 +4,7 @@ export DESTDIR="$1"
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D builtin_loaders=all \
-    -D installed_tests=false \
-    -D gtk_doc=false
+    -D installed_tests=false 
 
 ninja -C build
 ninja -C build install
