--- a/extra/libvirt/build
+++ b/extra/libvirt/build
@@ -11,15 +11,11 @@ sed -i "s|/usr/libexec/qemu-bride-helper|/usr/lib/qemu/qemu-bridge-helper|g" \
     src/qemu/qemu.conf \
     src/qemu/test_libvirtd_qemu.aug.in
 
-for i in *.patch; do
-    patch -Np1 -i $i
-done
-
-zsh
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D runstatedir=/run \
     -D qemu_group=kvm \
+    -D qemu_user=libvirt \
     -D netcf=disabled \
     -D openwsman=disabled \
     -D apparmor=disabled \
@@ -48,8 +44,6 @@ meson build \
 
 ninja -C build
 ninja -C build install
-
-mv "$1"/etc/{sysconfig,conf.d}
 
 mkdir "$1"/usr/lib/{sysusers,tmpfiles}.d
 cat  > "$1"/usr/lib/sysusers.d/libvirt.conf << EOF
