--- a/gui/sway/build
+++ b/gui/sway/build
@@ -4,7 +4,8 @@ export DESTDIR="$1"
 
 meson build \
     -D prefix=/usr \
-    -D man-pages=disabled
+    -D man-pages=disabled \
+    -D werror=false
 
 ninja -C build
 ninja -C build install
