--- a/core/tree/build
+++ b/core/tree/build
@@ -1,4 +1,4 @@
 #!/bin/sh -uxe
 
 make
-make prefix="$1/usr" MANDIR="$1/usr/share/man/man1" install
+make DESTDIR="$1/usr/bin"  MANDIR="$1/usr/share/man/man1" install
