openssh: enable libedit for sftp tab-completion
Signed-off-by: Mae Dartmann <mae@meanderingmind.me>

 Changes to be committed:
	new file:   core/libedit/build
	new file:   core/libedit/checksums
	new file:   core/libedit/sources
	new file:   core/libedit/version
	modified:   core/openssh/build
	modified:   core/openssh/version

--- a/core/openssh/build
+++ b/core/openssh/build
@@ -22,6 +22,7 @@ autoreconf -v
 	--enable-utmp \
 	--with-sandbox \
 	--with-shadow \
+    --with-libedit \
 	--with-default-path='/usr/local/sbin:/usr/local/bin:/usr/bin'
 
 make
