audit: 3.0.8; fix build issues with linux 5.17+
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/audit/build
	modified:   core/audit/checksums
	modified:   core/audit/sources
	modified:   core/audit/version

--- a/core/audit/build
+++ b/core/audit/build
@@ -1,5 +1,9 @@
 #!/bin/sh -uxe
 
+cp /usr/include/linux/audit.h lib/audit.h
+
+patch -p1 -i audit-3.0.8-flex-array-workaround.patch
+
 ./configure \
 	--prefix=/usr \
 	--sbindir=/usr/bin \
