audit: fix broken install
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/audit/build
	modified:   core/audit/checksums
	new file:   core/audit/patches/undo-flex-array.patch
	modified:   core/audit/sources

--- a/core/audit/build
+++ b/core/audit/build
@@ -17,7 +17,9 @@ make
 
 make DESTDIR="$1" INSTALL="install -p" install
 
+srcdir=$PWD
 cd "$1"
+patch -p0 < $srcdir/undo-flex-array.patch
 install -dm700 var/log/audit
 
 rm -rf etc/rc.d \
