i2c-tools: makefile install fixes
distutils is annoying -.-

Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/i2c-tools/build

--- a/extra/i2c-tools/build
+++ b/extra/i2c-tools/build
@@ -2,8 +2,10 @@
 
 patch -Np1 -i python-makefile.patch
 
+export pkgdir=$1
+
 make EXTRA="eeprog py-smbus"
-make EXTRA="eeprog py-smbus" DESTDIR="$1" PREFIX="/usr" sbindir="/usr/bin" install
+make EXTRA="eeprog py-smbus" DESTDIR="/" PREFIX="$pkgdir/usr" sbindir="$pkgdir/usr/bin" install
 
 install -Dm644 i2c-tools.sysusers "$1"/usr/lib/sysusers.d/i2c-tools.sysusers
 install -Dm644 45-i2c-tools.rules "$1"/usr/lib/udev/rules.d/45-i2c-tools.rules
