--- a/gnome/libindicator/build
+++ b/gnome/libindicator/build
@@ -18,7 +18,7 @@ cd gtk3
 sed -i "s| -shared | ${LDFLAGS}\0|g" libtool
 
 make
-make DESTDIR="$1" install
+make DESTDIR="$1" -j1 install
 
 cd ../gtk2
 ../configure \
