jsoncpp: fix installdir for static builds
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/jsoncpp/build

--- a/core/jsoncpp/build
+++ b/core/jsoncpp/build
@@ -9,6 +9,7 @@ ninja -C build
 ninja -C build install
 
 meson build-static \
+	${MESON_OPTIONS/-D b_lto=true/} \
 	--default-library static
 
 ninja -C build-static
