python: fix build issue, add note for ensurepip
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/python/build
	new file:   core/python/post-install

--- a/core/python/build
+++ b/core/python/build
@@ -31,6 +31,8 @@ export LINKFORSHARED="$LDFLAGS"
     --with-doc-strings \
     ax_cv_c_float_words_bigendian=no
 
+find -name Makefile -exec sed -i "s|-Werror|-Wno-error|g" {} +
+
 make
 make DESTDIR="$1" install
 
