texinfo: fix build
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/texinfo/build
	modified:   core/texinfo/checksums
	modified:   core/texinfo/sources

--- a/core/texinfo/build
+++ b/core/texinfo/build
@@ -1,6 +1,10 @@
 #!/bin/sh -uxe
 
+patch -Rp1 -i gnulib\?id=e3529d91abed939dde0975c0d71735b0fd0395fb 
+
+autoreconf -fiv
+
 ./configure --prefix=/usr
 
-make 
+make -j1
 make DESTDIR="$1" install
