tracker3: use soup2
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   gnome/tracker3/build

--- a/gnome/tracker3/build
+++ b/gnome/tracker3/build
@@ -4,6 +4,7 @@ export DESTDIR="$1"
 meson build \
     ${MESON_OPTIONS/-D b_lto=true/} \
     -D docs=false \
+    -D soup=soup2 \
     -D man=false
 
 ninja -C build -j1
