--- a/extra/dav1d/build
+++ b/extra/dav1d/build
@@ -2,10 +2,7 @@
 export DESTDIR="$1"
 
 meson build \
-    ${MESON_OPTIONS/-D b_lto=true} \
-    -D testdata_tests=false \
-    -D enable_avx512=false \
-    -D xxhash_muxer=disabled
+    ${MESON_OPTIONS/-D b_lto=true} 
 
-ninja -C build
-ninja -C build install
+ninja -C build all
+ninja -C build install 
